cabal-version:      2.4
name:               2dEngine
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             chififid
maintainer:         who

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Logic,
        Gui

    -- Modules included in this library but not exported.
    other-modules:
        Base,
        Collisions,
        Vec,
        Forces,
        Levels,
        Links

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        generic-lens,
        lens,
        gloss,
        random,
        parallel
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -threaded
    default-extensions: StrictData


executable 2dEngine
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        generic-lens,
        lens,
        gloss,
        random,
        2dEngine

    hs-source-dirs:   app 
    default-language: Haskell2010
    ghc-options: -threaded

test-suite 2dEngine-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
